# azola

./: CHANGELOG.md  Cargo.toml  MERGE_NOTES.md  README.md  dist-workspace.toml  publish_howto.txt
.github/workflows/: release.yml
components/content/: Cargo.toml
components/errors/: Cargo.toml
components/imageproc/src/: processor.rs
components/libs/: Cargo.toml
components/markdown/: Cargo.toml
components/site/: Cargo.toml
components/site/src/: tpls.rs
components/templates/: Cargo.toml
components/templates/src/global_fns/: files.rs  gw2.rs  mod.rs
wix/: main.wxs
