[package]
name = "azola"
version = "0.1.4"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>", "Andy Berdan <andy@berdan.ca>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in. Forked from zola with customizations for aw2"
homepage = "https://www.getzola.org"
repository = "https://github.com/berdandy/azola"
keywords = ["static", "site", "generator", "blog"]
include = ["src/**/*", "LICENSE", "README.md"]
publish = false

[build-dependencies]
winres = "0.1"
time = "0.3"

[[bin]]
name = "azola"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Below is for the serve cmd
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
notify = "4"
ws = "0.9"
ctrlc = "3"
open = "5"
pathdiff = "0.2"
# For mimetype detection in serve mode
mime_guess = "2.0"
# For essence_str() function, see https://github.com/getzola/zola/issues/1845
mime = "0.3.16"
openssl = { version = "0.10.59", features = ["vendored"] }


site = { path = "components/site" }
errors = { path = "components/errors" }
console = { path = "components/console" }
utils = { path = "components/utils" }
libs = { path = "components/libs" }


[dev-dependencies]
same-file = "1"

[features]
default = ["rust-tls"]
rust-tls = ["libs/rust-tls"]
native-tls = ["libs/native-tls"]
indexing-zh = ["libs/indexing-zh"]
indexing-ja = ["libs/indexing-ja"]

[workspace]
members = ["components/*"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.winres]
OriginalFilename = "zola.exe"
InternalName = "zola"

[package.metadata.wix]
upgrade-guid = "BD78BA4C-7593-4C05-A9E2-CBB0EAA1FD6B"
path-guid = "B0D40DE3-F52A-4A93-9532-2E15655AA4CC"
license = false
eula = false
